# Format Python
[tool.black]
line-length = 80
target-version = ['py310', 'py311']
include = '(\.pyi?$|\.spec$)'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | buildozer\.spec
)
'''

# Sort imports
# Settings to fit Black formatting
# Taken from https://github.com/timothycrosley/isort/issues/694
[tool.isort]
line_length = 80
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
force_grid_wrap = 0
ensure_newline_before_comments = true
known_third_party = ["setuptools", "kivy", "requests", "pillow", "android", "jnius", "watchdog", "sphinx", "docutils", "autoapi", "unidecode"]


[tool.poetry]
name = "kivymd"
version = "2.0.1.dev0"
description = ""
authors = ["Andrés Rodríguez", "Yuri Ivanov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kivy = "2.3.0"
asynckivy = "^0.7"
pillow = "^11.0.0"
materialyoucolor = "^2.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
